// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Blockquote should render with default styles 1`] = `
.circuit-1 {
  font-weight: 400;
  margin-bottom: 16px;
  font-size: 13px;
  line-height: 20px;
  font-style: italic;
  padding-left: 12px;
  border-left: 2px solid #3388FF;
}

@media (min-width:480px) {
  .circuit-1 {
    font-size: 13px;
    line-height: 20px;
  }
}

<blockquote
  className="circuit-0 circuit-1 circuit-2"
>
  
  Lorem ipsum dolor amet echo park activated charcoal banjo deep
  crucifix pinterest yr af tumeric literally. Tbh four loko tattooed
  kickstarter artisan.
  
</blockquote>
`;

exports[`Blockquote should render with giga styles 1`] = `
.circuit-1 {
  font-weight: 400;
  margin-bottom: 16px;
  font-size: 15px;
  line-height: 24px;
  font-style: italic;
  padding-left: 12px;
  border-left: 2px solid #3388FF;
  padding-left: 16px;
  border-left: 3px solid #3388FF;
}

@media (min-width:480px) {
  .circuit-1 {
    font-size: 18px;
    line-height: 28px;
  }
}

<blockquote
  className="circuit-0 circuit-1 circuit-2"
>
  
  Lorem ipsum dolor amet echo park activated charcoal banjo deep
  crucifix pinterest yr af tumeric literally. Tbh four loko tattooed
  kickstarter artisan.
  
</blockquote>
`;

exports[`Blockquote should render with mega styles 1`] = `
.circuit-1 {
  font-weight: 400;
  margin-bottom: 16px;
  font-size: 15px;
  line-height: 24px;
  font-style: italic;
  padding-left: 12px;
  border-left: 2px solid #3388FF;
}

@media (min-width:480px) {
  .circuit-1 {
    font-size: 15px;
    line-height: 24px;
  }
}

<blockquote
  className="circuit-0 circuit-1 circuit-2"
>
  
  Lorem ipsum dolor amet echo park activated charcoal banjo deep
  crucifix pinterest yr af tumeric literally. Tbh four loko tattooed
  kickstarter artisan.
  
</blockquote>
`;
